--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ body {
     background-color: green;
     opacity:0.5;
 }
+.toBeat {
+    background-color: red;
+    opacity:0.5;
+}
 
 .checkedThis {
     opacity:0.5;
